# morefit

./: CMakeLists.txt  README.md  cmake.sh
benchmarking/: morefit_kstarmumu.cc  morefit_massfit.cc  roofit_kstarmumu.cc  roofit_massfit.cc  zfit_kstarmumu.py  zfit_massfit.py
include/: compute.hh  compute_llvm.hh  compute_opencl.hh  dimensionvector.hh  eventvector.hh  fitter.hh  generator.hh  graph.hh  llvm_compiler.hh  llvm_jit.hh  morefit.hh  parametervector.hh  pdf.hh  physicspdfs.hh  plotter.hh  random.hh  toystudy.hh  utils.hh
minuit2/: Minuit2Config.cmake  StandAlone.cmake
minuit2/inc/Minuit2/: FumiliFCNAdapter.h  Minuit2Minimizer.h  NumericalDerivator.h
tests/: comparison_kstarmumu.cc  comparison_massfit.cc  tests_kstarmumu.cc  tests_massfit.cc
